--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ body{
   align-items: center;
   gap: 6px;
   transition: background 0.3s;
-  margin-bottom:2px;
+  margin-top:0px;
 }
 #menu-btn:hover { background-color: #0056b3; }
 </style>
