--- a/index.html
+++ b/index.html
@@ -3,42 +3,51 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard Compacto</title>
+<title>Dashboard Vendoo</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 <style>
-:root{
-  --card-bg:#fff;
-  --muted:#6b7280;
-  --shadow:0 6px 20px rgba(15,23,42,0.1);
-  font-family:'Inter', sans-serif;
+:root {
+  --bg-color: #ffffff;
+  --text-color: #1f1f1f;
+  --card-bg: #f8fafc;
+  --shadow-color: rgba(0,0,0,0.08);
+  --menu-text: #2b2b2b;
 }
 
-body{
+.dark-mode {
+  --bg-color: #121212;
+  --text-color: #eaeaea;
+  --card-bg: #181818;
+  --shadow-color: rgba(0,0,0,0.5);
+  --menu-text: #bfbfbf;
+}
+
+body {
   margin:0;
-  padding:20px;
-  background:#f3f4f6;
+  font-family: Arial, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.4s ease, color 0.4s ease;
   display:flex;
   flex-direction:column;
   align-items:center;
-  font-size:14px;
-  color:#0f172a;
   gap:16px;
+  padding-bottom:70px; /* espaço para rodapé */
 }
 
-/* Cards */
+/* CARDS */
 .card, .chart-card{
   background:var(--card-bg);
   border-radius:16px;
   padding:16px;
-  box-shadow:var(--shadow);
+  box-shadow:0 6px 20px rgba(0,0,0,0.1);
   width:100%;
   max-width:280px;
   margin-top:10px;
 }
 
-/* Títulos */
+/* TÍTULOS */
 .titulo-dashboard{
   font-weight:700;
   font-size:18px;
@@ -47,7 +56,7 @@ body{
   width:100%
 }
 
-/* Botão Período */
+/* BOTÃO PERÍODO */
 #periodoWrapper {
   position:relative; 
   width:160px; 
@@ -59,10 +68,10 @@ body{
   top:-10px;
   left:50%;
   transform:translateX(-50%);
-  background:#fff;
+  background: var(--card-bg);
   padding:0 6px;
   font-size:12px;
-  color:#6b7280;
+  color:var(--text-color);
   font-weight:600;
   z-index:2;
 }
@@ -74,7 +83,8 @@ body{
   border:1px solid #ccc;
   border-radius:8px;
   padding:8px 12px;
-  background:#f9f9f9;
+  background: var(--card-bg);
+  color: var(--text-color);
   cursor:pointer;
   position:relative;
   z-index:1;
@@ -85,7 +95,7 @@ body{
   display:none;
   flex-direction:column;
   border:1px solid #ccc;
-  background:#fff;
+  background: var(--card-bg);
   border-radius:8px;
   margin-top:4px;
   width:160px;
@@ -100,10 +110,11 @@ body{
 .option{
   padding:6px 10px;
   cursor:pointer;
+  color: var(--text-color);
 }
 
 .option.selected{
-  background:#f3f4f6;
+  background: rgba(0,0,0,0.05);
 }
 
 /* Esconde input date */
@@ -132,7 +143,7 @@ body{
 .conversao { color: #FFA500; }
 .ticket { color: #8A2BE2; }
 
-/* Gráfico */
+/* GRÁFICO */
 .chart-card .chart-wrap{
   width:100%;
   height:180px;
@@ -149,7 +160,7 @@ body{
 }
 
 .center-total .label{
-  color:var(--muted);
+  color:var(--text-color);
   font-size:12px;
 }
 
@@ -171,7 +182,7 @@ body{
   gap:6px;
   align-items:center;
   font-size:12px;
-  color:var(--muted);
+  color:var(--text-color);
   cursor:pointer;
 }
 
@@ -181,7 +192,8 @@ body{
   border-radius:2px;
 }
 
- footer {
+/* RODAPÉ */
+footer {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -192,7 +204,7 @@ body{
   align-items: center;
   justify-content: space-between;
   padding: 10px 16px;
-  box-shadow: 0 -2px 10px rgba(0,0,0,0.08);
+  box-shadow: 0 -2px 10px var(--shadow-color);
   z-index: 1000;
 }
 
@@ -200,7 +212,6 @@ body{
   display: flex;
   align-items: center;
   gap: 8px;
-  font-family: 'Poppins', sans-serif;
 }
 
 .logo-square {
@@ -243,15 +254,60 @@ body{
   font-weight: 600;
   color: var(--text-color);
 }
-
 #toggle-theme { font-size: 23px; }
 #menu-btn { font-size: 18px; }
-
 #toggle-theme:hover, #menu-btn:hover { transform: scale(1.05); } 
+
+/* MENU LATERAL */
+#side-menu {
+  position: fixed;
+  top: 0;
+  right: -50%;
+  width: 50%;
+  height: 100%;
+  background-color: var(--card-bg);
+  box-shadow: -2px 0 10px var(--shadow-color);
+  transition: right 0.3s ease;
+  z-index: 1002;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+#side-menu.active { right: 0; }
+#close-menu {
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  font-size: 25px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: var(--menu-text);
+  opacity: 0.85;
+  transition: opacity 0.2s;
+}
+#close-menu:hover { opacity: 1; }
+.side-menu-item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 12px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--menu-text);
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background 0.2s, opacity 0.2s;
+  opacity: 0.85;
+}
+.side-menu-item:hover { background-color: rgba(0,0,0,0.05); opacity: 1; }
+.side-menu-item i { font-size: 22px; color: var(--menu-text); opacity:0.85; }
 </style>
 </head>
 <body>
-<!-- Card de Métricas -->
+
+<!-- CARD DE MÉTRICAS -->
 <div class="card">
 
   <!-- Botão Período -->
@@ -296,6 +352,25 @@ body{
       <div class="valor ticket">2 MZN</div>
   </div>
 </div>
+
+<!-- CARD GRÁFICO -->
+<div class="chart-card">
+  <div class="chart-title">Gráfico de Vendas</div>
+  <div class="chart-wrap">
+    <canvas id="doughnutChart"></canvas>
+    <div class="center-total">
+      <div class="label">TOTAL</div>
+      <div class="num" id="centerValue">0 MT</div>
+      <div style="font-size:11px;color:var(--text-color);margin-top:4px;">M-Pesa + E-Mola</div>
+    </div>
+  </div>
+  <div class="legend-row">
+    <div class="legend-item" data-index="0"><div class="legend-swatch" style="background:#FF4136"></div>M-Pesa</div>
+    <div class="legend-item" data-index="1"><div class="legend-swatch" style="background:#FFA500"></div>E-Mola</div>
+  </div>
+</div>
+
+<!-- RODAPÉ -->
 <footer>
   <div class="footer-left">
     <div class="logo-square">V</div>
@@ -310,24 +385,16 @@ body{
     </button>
   </div>
 </footer>
-<!-- Card Gráfico -->
-<div class="chart-card">
-  <div class="chart-title">Gráfico de Vendas</div>
 
-  <div class="chart-wrap">
-    <canvas id="doughnutChart"></canvas>
-
-    <div class="center-total">
-      <div class="label">TOTAL</div>
-      <div class="num" id="centerValue">0 MT</div>
-      <div style="font-size:11px;color:var(--muted);margin-top:4px;">M-Pesa + E-Mola</div>
-    </div>
-  </div>
-
-  <div class="legend-row">
-    <div class="legend-item" data-index="0"><div class="legend-swatch" style="background:#FF4136"></div>M-Pesa</div>
-    <div class="legend-item" data-index="1"><div class="legend-swatch" style="background:#FFA500"></div>E-Mola</div>
-  </div>
+<!-- MENU LATERAL -->
+<div id="side-menu">
+  <button id="close-menu" aria-label="Fechar menu"><i class="bi bi-chevron-left"></i></button>
+  <div class="side-menu-item"><i class="bi bi-person-bounding-box"></i> Perfil</div>
+  <div class="side-menu-item"><i class="bi bi-house"></i> Dashboard</div>
+  <div class="side-menu-item"><i class="bi bi-box-seam"></i> Produtos</div>
+  <div class="side-menu-item"><i class="bi bi-cash-stack"></i> Meu checkout</div>
+  <div class="side-menu-item"><i class="bi bi-credit-card-fill"></i> Financeiro</div>
+  <div class="side-menu-item"><i class="bi bi-file-earmark-bar-graph"></i> Relatório</div>
 </div>
 
 <script>
@@ -396,7 +463,6 @@ const doughnutChart = new Chart(ctx, {
   }
 });
 
-// Toggle visibilidade clicando na legenda
 const legendItems = document.querySelectorAll('.legend-item');
 legendItems.forEach(item => {
   item.addEventListener('click', () => {
@@ -407,7 +473,7 @@ legendItems.forEach(item => {
   });
 });
 
-  // Alternar tema claro/escuro
+// Alternar tema claro/escuro
 const toggleBtn = document.getElementById('toggle-theme');
 toggleBtn.addEventListener('click', () => {
   document.body.classList.toggle('dark-mode');
@@ -419,7 +485,7 @@ toggleBtn.addEventListener('click', () => {
   }
 });
 
-// Ajuste automático do sistema para dark mode
+// Modo escuro automático
 if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
   document.body.classList.add('dark-mode');
   document.getElementById('theme-icon').classList.replace('bi-sun', 'bi-moon');
@@ -432,15 +498,13 @@ const closeMenu = document.getElementById('close-menu');
 
 menuBtn.addEventListener('click', () => {
   sideMenu.classList.add('active');
-  menuBtn.style.display = 'none'; // esconde o botão
+  menuBtn.style.display = 'none';
 });
 
 closeMenu.addEventListener('click', () => {
   sideMenu.classList.remove('active');
-  menuBtn.style.display = 'flex'; // mostra o botão novamente
+  menuBtn.style.display = 'flex';
 });
-  
- 
 </script>
 
 </body>
