--- a/index.html
+++ b/index.html
@@ -389,12 +389,12 @@ footer {
 <!-- MENU LATERAL -->
 <div id="side-menu">
   <button id="close-menu" aria-label="Fechar menu"><i class="bi bi-chevron-left"></i></button>
-  <div class="side-menu-item"><i class="bi bi-person-bounding-box"></i> Perfil</div>
   <div class="side-menu-item"><i class="bi bi-house"></i> Dashboard</div>
-  <div class="side-menu-item"><i class="bi bi-box-seam"></i> Produtos</div>
+  <div class="side-menu-item" onclick="window.location.href='produtos.html'">
+  <i class="bi bi-box-seam"></i> Produtos
+</div>
   <div class="side-menu-item"><i class="bi bi-cash-stack"></i> Meu checkout</div>
-  <div class="side-menu-item"><i class="bi bi-credit-card-fill"></i> Financeiro</div>
-  <div class="side-menu-item"><i class="bi bi-file-earmark-bar-graph"></i> Relatório</div>
+  <div class="side-menu-item"><i class="bi bi-person-bounding-box"></i> Perfil</div>
 </div>
 
 <script>
