--- a/produto.html
+++ b/produto.html
@@ -21,7 +21,7 @@
     <h1>Produtos</h1>
    <!-- Botão Criar Produto usando div onclick -->
   <div class="btn-div" onclick="window.location.href='criar-produtos.html';">
-    <i class="bi bi-plus-square"></i> Criar Produto
+    <i class="bi bi-plus-square"></i> criar Produto
   </div>
   
     <input type="text" id="buscaInput" placeholder="Buscar por nome..." />    <table>  
