--- a/criar-produtos.html
+++ b/criar-produtos.html
@@ -1,1 +1,169 @@
 
+<!DOCTYPE html>  <html lang="pt-BR">  
+<head>  
+  <meta charset="UTF-8" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+  <title>Produtos - Vendoo</title>    <!-- Fonte Poppins -->    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">    <!-- Ícones Bootstrap -->    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">    <style>  
+    * {   
+      box-sizing: border-box;   
+      margin: 0;   
+      padding: 0;   
+      font-family: 'Poppins', sans-serif;   
+    }  
+  
+    body {  
+      background: #ffffff;  
+      color: #111111;  
+      display: flex;  
+      flex-direction: column;  
+      align-items: center;  
+      padding: 20px;  
+    }  
+  
+    .top-bar {  
+      display: flex;  
+      justify-content: flex-start;  
+      align-items: center;  
+      width: 100%;  
+      max-width: 800px;  
+      margin-bottom: 20px;  
+    }  
+  
+   
+  
+    .card {  
+      background: #f8f9fa;  
+      padding: 20px;  
+      border-radius: 12px;  
+      width: 100%;  
+      max-width: 800px;  
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);  
+    }  
+  
+    .card h2 {  
+      margin-bottom: 15px;  
+      font-size: 22px;  
+    }  
+  
+    .form-group {  
+      margin-bottom: 15px;  
+      display: flex;  
+      flex-direction: column;  
+    }  
+  
+    .form-group label {  
+      font-size: 14px;  
+      margin-bottom: 5px;  
+      color: #111;  
+    }  
+  
+    .form-group input,   
+    .form-group textarea,   
+    .form-group select {  
+      padding: 10px;  
+      border-radius: 6px;  
+      border: 1px solid #ccc;  
+      font-size: 15px;  
+      background: #ffffff;  
+    }  
+  
+    button {  
+      background: #4cafef;  
+      color: #fff;  
+      padding: 12px 20px;  
+      border: none;  
+      border-radius: 6px;  
+      cursor: pointer;  
+      font-size: 15px;  
+      transition: background 0.3s;  
+    }  
+    button:hover {  
+      background: #3b92d4;  
+    }  
+  
+    /* Campo Categoria com ícone */  
+    .select-wrapper {  
+      position: relative;  
+      display: flex;  
+      align-items: center;  
+    }  
+  
+    .select-wrapper select {  
+      width: 100%;  
+      appearance: none;  
+      -webkit-appearance: none;  
+      -moz-appearance: none;  
+      padding-right: 35px;  
+    }  
+  
+    .select-wrapper i {  
+      position: absolute;  
+      right: 12px;  
+      font-size: 18px;  
+      pointer-events: none;  
+      color: #555;  
+    }  
+  
+    #preview-img {  
+      width: 100%;  
+      max-width: 200px;  
+      margin-top: 10px;  
+      display: none;  
+      border-radius: 8px;  
+    }  
+  </style>  </head>  
+<body>    <div class="top-bar">  
+     
+  </div>    <div class="card">  
+    <h2>Cadastrar Produto</h2>  
+    <form>  
+      <div class="form-group">  
+        <label for="nome">Nome do Produto</label>  
+        <input type="text" id="nome" placeholder="Ex: Curso de Marketing" required>  
+      </div>  <div class="form-group">  
+    <label for="preco">Preço (MT)</label>  
+    <input type="number" id="preco" placeholder="Ex: 1500" required>  
+  </div>  
+
+  <div class="form-group">  
+    <label for="descricao">Descrição</label>  
+    <textarea id="descricao" rows="4" placeholder="Explique brevemente sobre o produto..."></textarea>  
+  </div>  
+
+  <!-- Campo Categoria com ícone -->  
+  <div class="form-group">  
+    <label for="categoria">Categoria</label>  
+    <div class="select-wrapper">  
+      <select id="categoria">  
+        <option>Curso</option>  
+        <option>E-book</option>  
+        <option>Mentoria</option>  
+        <option>Outro</option>  
+      </select>  
+      <i class="bi bi-chevron-down"></i>  
+    </div>  
+  </div>  
+
+  <!-- Upload da Imagem -->  
+  <div class="form-group">  
+    <label for="foto">Foto do Produto</label>  
+    <input type="file" id="foto" accept="image/*">  
+    <img id="preview-img" />  
+  </div>  
+
+  <button type="submit">Salvar Produto</button>  
+</form>
+
+  </div>    <script>  
+    const fotoInput = document.getElementById('foto');  
+    const preview = document.getElementById('preview-img');  
+  
+    fotoInput.addEventListener('change', () => {  
+      const file = fotoInput.files[0];  
+      if (file) {  
+        preview.src = URL.createObjectURL(file);  
+        preview.style.display = 'block';  
+      }  
+    });  
+  </script>  </body>  
+</html>  
