--- a/index.html
+++ b/index.html
@@ -388,11 +388,13 @@ footer {
 
 <!-- MENU LATERAL -->
 <div id="side-menu">
-  <button id="close-menu" aria-label="Fechar menu"><i class="bi bi-chevron-left"></i></button>
-  <div class="side-menu-item"><i class="bi bi-house"></i> Dashboard</div>
+  <button id="close-menu"aria-label="Fechar menu"><i class="bi bi-chevron-left"></i></button>
+  
+  <div class="side-menu-item"onclick="window.location.href='index.html';"><i class="bi bi-house"></i> Dashboard</div>
   
 <div class="side-menu-item" onclick="window.location.href='produto.html';">
   <i class="bi bi-box-seam"></i> Produto</div>
+  
   <div class="side-menu-item"><i class="bi bi-cash-stack"></i> Meu checkout</div>
   <div class="side-menu-item"><i class="bi bi-person-bounding-box"></i> Perfil</div>
 </div>
