--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@ body {
 .valor { font-size: 17px; font-weight: normal; text-align: center; }
 
 .faturamento { color: #228B22; }
-.vendas { color: #00ffff; }
-.conversao { color: #00ffff; }
-.ticket { color: #00ffff; }
+.vendas { color: #0bffff; }
+.conversao { color: #0bffff; }
+.ticket { color: #0bffff; }
 
 /* GRÁFICO */
 .chart-card .chart-wrap{
