--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ body {
 .secao-icon { font-size: 35px; }
 
 .titulo { font-weight: bold; font-size: 15px; text-align: center; }
-.valor { font-size: 17px; font-weight: normal; text-align: center; }
+.valor { font-size: 21px; font-weight: normal; text-align: center; }
 
-.faturamento { color: #228B22; }
-.vendas { color: #0bffff; }
-.conversao { color: #0bffff; }
-.ticket { color: #0bffff; }
+.faturamento { color: #0080ff; }
+.vendas { color: #0080ff; }
+.conversao { color: #0080ff; }
+.ticket { color: #0080ff; }
 
 /* GRÁFICO */
 .chart-card .chart-wrap{
