--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ body {
 .titulo { font-weight: bold; font-size: 15px; text-align: center; }
 .valor { font-size: 21px; font-weight: normal; text-align: center; }
 
-.faturamento { color: #0080ff; }
-.vendas { color: #0080ff; }
-.conversao { color: #0080ff; }
-.ticket { color: #0080ff; }
+.faturamento { color: red; }
+.vendas { color: #00aaff; }
+.conversao { color: #00aaff; }
+.ticket { color: #00aaff; }
 
 /* GRÁFICO */
 .chart-card .chart-wrap{
