--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
 .titulo { font-weight: bold; font-size: 15px; text-align: center; }
 .valor { font-size: 21px; font-weight: normal; text-align: center; }
 
-.faturamento { color: red; }
+.faturamento { color: #00ff00; }
 .vendas { color: #00aaff; }
 .conversao { color: #00aaff; }
 .ticket { color: #00aaff; }
