--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body {
 
 .faturamento { color: #00ff00; }
 .vendas { color: #00aaff; }
-.conversao { color: #00aaff; }
+.conversao { color: #FFB347; }
 .ticket { color: #00aaff; }
 
 /* GRÁFICO */
