--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body {
 .faturamento { color: #00ff00; }
 .vendas { color: #00aaff; }
 .conversao { color: #FFB347; }
-.ticket { color: #00aaff; }
+.ticket { color: #17A2B8; }
 
 /* GRÁFICO */
 .chart-card .chart-wrap{
