--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ footer {
   <div class="secao">
       <i class="bi bi-cash-coin secao-icon"></i>
       <div class="titulo">Faturamento</div>
-      <div class="valor faturamento">100 MZN</div>
+      <div class="valor faturamento">100.00MZN$</div>
   </div>
 
   <div class="secao">
