--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
 .titulo { font-weight: bold; font-size: 15px; text-align: center; }
 .valor { font-size: 17px; font-weight: normal; text-align: center; }
 
-.faturamento { color: #008000; }
+.faturamento { color: 	 #00e600; }
 .vendas { color: #00aaff; }
 .conversao { color: #FFB347; }
 .ticket { color: #17A2B8; }
