--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 :root {
   --bg-color: #ffffff;
   --text-color: #1f1f1f;
-  --card-bg: #f8fafc;
+  --card-bg: #f2f2f2;
   --shadow-color: rgba(0,0,0,0.08);
   --menu-text: #2b2b2b;
 }
