--- a/Login.html
+++ b/Login.html
@@ -94,7 +94,7 @@ input[type="email"], input[type="password"]{
 
   <div class="bottom-text">
     <a href="reset-password.html">Esqueceu a senha?</a><br>
-    Não tem conta? <a href="signup.html">Criar conta</a>
+    Não tem conta? <a href="Dashboard.html">Criar conta</a>
   </div>
 </div>
 
