--- a/Criar conta.html
+++ b/Criar conta.html
@@ -5,88 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Criar Conta</title>
 <style>
-:root{
-  --accent:#0077cc;
-  --bg:#f6f8fb;
-  --card:#ffffff;
-  --text:#0f172a;
-  --muted:#6b7280;
-}
-body{
-  margin:0;
-  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
-  background: var(--bg);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-}
-.card{
-  background: var(--card);
-  padding: 24px;
-  border-radius: 12px;
-  box-shadow: 0 8px 30px rgba(11,23,39,0.08);
-  width: 100%;
-  max-width: 270px;
-}
-h2{
-  margin-top:0;
-  margin-bottom:16px;
-  font-size:20px;
-  color: var(--text);
-  text-align:center;
-}
-label{
-  display:block;
-  margin-bottom:6px;
-  font-weight:600;
-  font-size:13px;
-  color: var(--text);
-}
-input[type="text"], input[type="email"], input[type="password"]{
-  width:95%;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #e6e9ef;
-  margin-bottom:12px;
-  font-size:14px;
-}
-input[type="checkbox"]{
-  margin-right:6px;
-}
-.btn{
-  display:block;
-  width:100%;
-  padding:14px;
-  background: var(--accent);
-  color:#fff;
-  font-weight:600;
-  border:none;
-  border-radius:12px;
-  cursor:pointer;
-  font-size:16px;
-  margin-top:8px;
-}
-.btn:disabled{
-  opacity:0.5;
-  cursor:not-allowed;
-}
-.bottom-text{
-  text-align:center;
-  margin-top:16px;
-  font-size:14px;
-  color: var(--muted);
-}
-.bottom-text a{
-  color: var(--accent);
-  text-decoration:none;
-  font-weight:600;
-  margin-left:4px;
-}
+:root{--accent:#0077cc;--bg:#f6f8fb;--card:#ffffff;--text:#0f172a;--muted:#6b7280}
+body{margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg);display:flex;justify-content:center;align-items:center;min-height:100vh}
+.card{background:var(--card);padding:24px;border-radius:12px;box-shadow:0 8px 30px rgba(11,23,39,0.08);width:100%;max-width:270px}
+h2{margin-top:0;margin-bottom:16px;font-size:20px;color:var(--text);text-align:center}
+label{display:block;margin-bottom:6px;font-weight:600;font-size:13px;color:var(--text)}
+input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e6e9ef;margin-bottom:12px;font-size:14px}
+.btn{display:block;width:100%;padding:14px;background:var(--accent);color:#fff;font-weight:600;border:none;border-radius:12px;cursor:pointer;font-size:16px;margin-top:8px}
+.bottom-text{text-align:center;margin-top:16px;font-size:14px;color:var(--muted)}
+.bottom-text a{color:var(--accent);text-decoration:none;font-weight:600;margin-left:4px}
 </style>
 </head>
 <body>
-
 <div class="card">
   <h2>Criar Conta</h2>
   <form id="signupForm">
@@ -99,12 +29,10 @@ input[type="checkbox"]{
     <label for="password">Senha</label>
     <input type="password" id="password" required>
 
-    <label for="confirmPassword">Confirmar Senha</label>
+    <label for="confirmPassword">Confirmar senha</label>
     <input type="password" id="confirmPassword" required>
 
-    <label>
-      <input type="checkbox" id="terms" required> Aceito os termos e condições
-    </label>
+    <label><input type="checkbox" id="terms" required> Aceito os termos e condições</label>
 
     <button type="submit" class="btn">Criar Conta</button>
   </form>
@@ -114,5 +42,21 @@ input[type="checkbox"]{
   </div>
 </div>
 
+<script>
+const form = document.getElementById('signupForm');
+form.addEventListener('submit', e=>{
+  e.preventDefault();
+  const pwd = document.getElementById('password').value;
+  const conf = document.getElementById('confirmPassword').value;
+  const terms = document.getElementById('terms').checked;
+
+  if(pwd !== conf){ alert('Senhas não coincidem'); return; }
+  if(!terms){ alert('Aceite os termos'); return; }
+
+  // Aqui você chamaria o Firebase ou outro backend
+  alert('Conta criada com sucesso!');
+  window.location.href='login.html'; // redireciona para login
+});
+</script>
 </body>
 </html>
