--- a/login.html
+++ b/login.html
@@ -6,20 +6,22 @@
 <title>Login</title>
 <style>
 :root{--accent:#0077cc;--bg:#f6f8fb;--card:#ffffff;--text:#0f172a;--muted:#6b7280}
-body{margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg);display:flex;justify-content:center;align-items:center;min-height:100vh}
+body{margin:0;font-family:Inter,sans-serif;background:var(--bg);display:flex;justify-content:center;align-items:center;min-height:100vh}
 .card{background:var(--card);padding:24px;border-radius:12px;box-shadow:0 8px 30px rgba(11,23,39,0.08);width:100%;max-width:270px}
 h2{margin-top:0;margin-bottom:16px;font-size:20px;color:var(--text);text-align:center}
 label{display:block;margin-bottom:6px;font-weight:600;font-size:13px;color:var(--text)}
 input[type="email"],input[type="password"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e6e9ef;margin-bottom:12px;font-size:14px}
 .btn{display:block;width:100%;padding:14px;background:var(--accent);color:#fff;font-weight:600;border:none;border-radius:12px;cursor:pointer;font-size:16px;margin-top:8px}
+.btn:disabled{opacity:0.5;cursor:not-allowed}
 .bottom-text{text-align:center;margin-top:16px;font-size:14px;color:var(--muted)}
 .bottom-text a{color:var(--accent);text-decoration:none;font-weight:600;margin-left:4px}
 </style>
 </head>
 <body>
+
 <div class="card">
   <h2>Login</h2>
-  <form id="loginForm">
+  <form id="loginForm" onsubmit="event.preventDefault(); window.location.href='dashboard.html';">
     <label for="email">E-mail</label>
     <input type="email" id="email" required>
 
@@ -30,21 +32,13 @@ input[type="email"],input[type="password"]{width:95%;padding:10px;border-radius:
   </form>
 
   <div class="bottom-text">
-    Esqueceu a senha? <a href="reset-password.html">Recuperar</a>
+    <a href="reset-password.html">Esqueceu a senha?</a>
   </div>
+
   <div class="bottom-text">
-    Não tem conta? <a href="signup.html">Criar Conta</a>
+    Não tem conta? <a href="index.html">Criar Conta</a>
   </div>
 </div>
 
-<script>
-const loginForm = document.getElementById('loginForm');
-loginForm.addEventListener('submit', e=>{
-  e.preventDefault();
-  // Aqui você faria validação real
-  alert('Login realizado!');
-  window.location.href='dashboard.html'; // redireciona para Dashboard
-});
-</script>
 </body>
 </html>
