--- a/reset-password.html
+++ b/reset-password.html
@@ -3,27 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Recuperar Senha</title>
+<title>Redefinir Senha</title>
 <style>
 :root{--accent:#0077cc;--bg:#f6f8fb;--card:#ffffff;--text:#0f172a;--muted:#6b7280}
-body{margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:var(--bg);display:flex;justify-content:center;align-items:center;min-height:100vh}
+body{margin:0;font-family:Inter,sans-serif;background:var(--bg);display:flex;justify-content:center;align-items:center;min-height:100vh}
 .card{background:var(--card);padding:24px;border-radius:12px;box-shadow:0 8px 30px rgba(11,23,39,0.08);width:100%;max-width:270px}
 h2{margin-top:0;margin-bottom:16px;font-size:20px;color:var(--text);text-align:center}
 label{display:block;margin-bottom:6px;font-weight:600;font-size:13px;color:var(--text)}
 input[type="email"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e6e9ef;margin-bottom:12px;font-size:14px}
 .btn{display:block;width:100%;padding:14px;background:var(--accent);color:#fff;font-weight:600;border:none;border-radius:12px;cursor:pointer;font-size:16px;margin-top:8px}
+.btn:disabled{opacity:0.5;cursor:not-allowed}
 .bottom-text{text-align:center;margin-top:16px;font-size:14px;color:var(--muted)}
 .bottom-text a{color:var(--accent);text-decoration:none;font-weight:600;margin-left:4px}
 </style>
 </head>
 <body>
+
 <div class="card">
-  <h2>Recuperar Senha</h2>
-  <form id="resetForm">
-    <label for="email">E-mail cadastrado</label>
+  <h2>Redefinir Senha</h2>
+  <form id="resetForm" onsubmit="event.preventDefault(); window.location.href='login.html';">
+    <label for="email">Digite seu e-mail</label>
     <input type="email" id="email" required>
 
-    <button type="submit" class="btn">Enviar código</button>
+    <button type="submit" class="btn">Enviar link de redefinição</button>
   </form>
 
   <div class="bottom-text">
@@ -31,15 +33,5 @@ input[type="email"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e
   </div>
 </div>
 
-<script>
-const resetForm = document.getElementById('resetForm');
-resetForm.addEventListener('submit', e=>{
-  e.preventDefault();
-  // Aqui você chamaria Firebase para enviar email
-  alert('Código de recuperação enviado por email!');
-  // Redirecionar para a página de digitar código se houver
-  // window.location.href='verify-code.html';
-});
-</script>
 </body>
 </html>
