--- a/index.html
+++ b/index.html
@@ -45,6 +45,41 @@ input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:
     Já tem uma conta? <a href="login.html">Entrar</a>
   </div>
 </div>
+<script type="module">
+  // Import Firebase
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword, sendEmailVerification } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
+  const firebaseConfig = {
+    apiKey: "COLE_AQUI_SUA_API_KEY",
+    authDomain: "SEU_PROJETO.firebaseapp.com",
+    projectId: "SEU_PROJETO",
+    storageBucket: "SEU_PROJETO.appspot.com",
+    messagingSenderId: "SEU_SENDER_ID",
+    appId: "SEU_APP_ID"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  const form = document.getElementById("signupForm");
+  const nameEl = document.getElementById("name");
+  const emailEl = document.getElementById("email");
+  const passwordEl = document.getElementById("password");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const email = emailEl.value.trim();
+    const password = passwordEl.value.trim();
+    try {
+      const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+      await sendEmailVerification(userCredential.user);
+      alert("Conta criada! Verifique seu email para ativar a conta.");
+      window.location.href = "login.html"; // Redireciona para login
+    } catch (error) {
+      alert(error.message);
+    }
+  });
+</script>
 </body>
 </html>
