--- a/login.html
+++ b/login.html
@@ -39,6 +39,41 @@ input[type="email"],input[type="password"]{width:95%;padding:10px;border-radius:
     Não tem conta? <a href="index.html">Criar Conta</a>
   </div>
 </div>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
+  const firebaseConfig = {
+    apiKey: "COLE_AQUI_SUA_API_KEY",
+    authDomain: "SEU_PROJETO.firebaseapp.com",
+    projectId: "SEU_PROJETO",
+    storageBucket: "SEU_PROJETO.appspot.com",
+    messagingSenderId: "SEU_SENDER_ID",
+    appId: "SEU_APP_ID"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  const form = document.getElementById("loginForm");
+  const emailEl = document.getElementById("email");
+  const passwordEl = document.getElementById("password");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const email = emailEl.value.trim();
+    const password = passwordEl.value.trim();
+    try {
+      const userCredential = await signInWithEmailAndPassword(auth, email, password);
+      if(userCredential.user.emailVerified){
+        window.location.href = "dashboard.html"; // Redireciona para dashboard
+      } else {
+        alert("Verifique seu email antes de entrar!");
+      }
+    } catch (error) {
+      alert(error.message);
+    }
+  });
+</script>
 </body>
 </html>
