--- a/reset-password.html
+++ b/reset-password.html
@@ -32,6 +32,36 @@ input[type="email"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e
     Lembrou a senha? <a href="login.html">Entrar</a>
   </div>
 </div>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+  import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
+  const firebaseConfig = {
+    apiKey: "COLE_AQUI_SUA_API_KEY",
+    authDomain: "SEU_PROJETO.firebaseapp.com",
+    projectId: "SEU_PROJETO",
+    storageBucket: "SEU_PROJETO.appspot.com",
+    messagingSenderId: "SEU_SENDER_ID",
+    appId: "SEU_APP_ID"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  const form = document.getElementById("resetForm");
+  const emailEl = document.getElementById("email");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const email = emailEl.value.trim();
+    try {
+      await sendPasswordResetEmail(auth, email);
+      alert("Email enviado! Verifique sua caixa de entrada.");
+      window.location.href = "login.html";
+    } catch (error) {
+      alert(error.message);
+    }
+  });
+</script>
 </body>
 </html>
