Refactor reset-password.html for better readability

--- a/reset-password.html
+++ b/reset-password.html
@@ -34,10 +34,14 @@ input[type="email"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e
 </div>
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-  import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+  import { 
+    getAuth, 
+    sendPasswordResetEmail 
+  } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
+  // 🔥 CONFIG DO FIREBASE — TROQUE PELOS SEUS DADOS
   const firebaseConfig = {
-    apiKey: "COLE_AQUI_SUA_API_KEY",
+    apiKey: "SUA_API_KEY",
     authDomain: "SEU_PROJETO.firebaseapp.com",
     projectId: "SEU_PROJETO",
     storageBucket: "SEU_PROJETO.appspot.com",
@@ -45,21 +49,26 @@ input[type="email"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e
     appId: "SEU_APP_ID"
   };
 
+  // 🔥 Inicializar Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
+  // 🔥 Campos do formulário de reset
   const form = document.getElementById("resetForm");
   const emailEl = document.getElementById("email");
 
+  // 🔥 Enviar email de redefinição
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
+    
     const email = emailEl.value.trim();
+
     try {
       await sendPasswordResetEmail(auth, email);
-      alert("Email enviado! Verifique sua caixa de entrada.");
+      alert("✔ Email enviado! Verifique sua caixa de entrada.");
       window.location.href = "login.html";
     } catch (error) {
-      alert(error.message);
+      alert("Erro: " + error.message);
     }
   });
 </script>
