--- a/index.html
+++ b/index.html
@@ -46,15 +46,9 @@ input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:
   </div>
 </div>
   <script type="module">
-  // Import Firebase (via CDN)
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-  import { 
-    getAuth, 
-    createUserWithEmailAndPassword, 
-    sendEmailVerification 
-  } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+  import { getAuth, createUserWithEmailAndPassword, sendEmailVerification } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
-  // *** SUA CONFIG REAL DO FIREBASE ***
   const firebaseConfig = {
     apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
     authDomain: "xavamoz.firebaseapp.com",
@@ -64,37 +58,34 @@ input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:
     appId: "1:681441008756:web:433985ef3f374672b78521"
   };
 
-  // Inicializar Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
-  // Elementos do formulário
   const form = document.getElementById("signupForm");
   const nameEl = document.getElementById("name");
   const emailEl = document.getElementById("email");
   const passwordEl = document.getElementById("password");
+  const confirmPasswordEl = document.getElementById("confirmPassword");
 
-  // Ação ao criar conta
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
 
     const email = emailEl.value.trim();
     const password = passwordEl.value.trim();
+    const confirmPassword = confirmPasswordEl.value.trim();
+
+    if (password !== confirmPassword) {
+      alert("As senhas não coincidem!");
+      return;
+    }
 
     try {
-      // Criar usuário
       const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-
-      // Enviar verificação por email
       await sendEmailVerification(userCredential.user);
-
-      alert("Conta criada! Verifique seu email para ativar sua conta.");
-
-      // Vai para login
+      alert("Conta criada! Verifique seu email para ativar a conta.");
       window.location.href = "login.html";
-
     } catch (error) {
-      alert("Erro: " + error.message);
+      alert(error.message);
     }
   });
 </script>
