--- a/login.html
+++ b/login.html
@@ -41,31 +41,24 @@ input[type="email"],input[type="password"]{width:95%;padding:10px;border-radius:
 </div>
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-  import { 
-    getAuth, 
-    signInWithEmailAndPassword
-  } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
-  // 🔥 CONFIG DO FIREBASE — TROQUE PELOS SEUS DADOS
   const firebaseConfig = {
-    apiKey: "SUA_API_KEY",
-    authDomain: "SEU_PROJETO.firebaseapp.com",
-    projectId: "SEU_PROJETO",
-    storageBucket: "SEU_PROJETO.appspot.com",
-    messagingSenderId: "SEU_SENDER_ID",
-    appId: "SEU_APP_ID"
+    apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
+    authDomain: "xavamoz.firebaseapp.com",
+    projectId: "xavamoz",
+    storageBucket: "xavamoz.firebasestorage.app",
+    messagingSenderId: "681441008756",
+    appId: "1:681441008756:web:433985ef3f374672b78521"
   };
 
-  // 🔥 Inicializar Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
-  // 🔥 CAMPOS DO FORMULÁRIO DE LOGIN
   const form = document.getElementById("loginForm");
   const emailEl = document.getElementById("email");
   const passwordEl = document.getElementById("password");
 
-  // 🔥 FUNÇÃO DE LOGIN
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
 
@@ -74,12 +67,13 @@ input[type="email"],input[type="password"]{width:95%;padding:10px;border-radius:
 
     try {
       const userCredential = await signInWithEmailAndPassword(auth, email, password);
-
-      // Se logou → ir para dashboard
-      window.location.href = "dashboard.html";
-
+      if (userCredential.user.emailVerified) {
+        window.location.href = "dashboard.html";
+      } else {
+        alert("Verifique seu email antes de entrar!");
+      }
     } catch (error) {
-      alert("Erro ao entrar: " + error.message);
+      alert(error.message);
     }
   });
 </script>
