--- a/reset-password.html
+++ b/reset-password.html
@@ -34,41 +34,34 @@ input[type="email"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e
 </div>
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-  import { 
-    getAuth, 
-    sendPasswordResetEmail 
-  } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+  import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
-  // 🔥 CONFIG DO FIREBASE — TROQUE PELOS SEUS DADOS
   const firebaseConfig = {
-    apiKey: "SUA_API_KEY",
-    authDomain: "SEU_PROJETO.firebaseapp.com",
-    projectId: "SEU_PROJETO",
-    storageBucket: "SEU_PROJETO.appspot.com",
-    messagingSenderId: "SEU_SENDER_ID",
-    appId: "SEU_APP_ID"
+    apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
+    authDomain: "xavamoz.firebaseapp.com",
+    projectId: "xavamoz",
+    storageBucket: "xavamoz.firebasestorage.app",
+    messagingSenderId: "681441008756",
+    appId: "1:681441008756:web:433985ef3f374672b78521"
   };
 
-  // 🔥 Inicializar Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
-  // 🔥 Campos do formulário de reset
   const form = document.getElementById("resetForm");
   const emailEl = document.getElementById("email");
 
-  // 🔥 Enviar email de redefinição
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
-    
+
     const email = emailEl.value.trim();
 
     try {
       await sendPasswordResetEmail(auth, email);
-      alert("✔ Email enviado! Verifique sua caixa de entrada.");
+      alert("Email enviado! Verifique sua caixa de entrada.");
       window.location.href = "login.html";
     } catch (error) {
-      alert("Erro: " + error.message);
+      alert(error.message);
     }
   });
 </script>
