--- a/index.html
+++ b/index.html
@@ -1,27 +1,88 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Criar Conta</title>
 <style>
-:root{--accent:#0077cc;--bg:#f6f8fb;--card:#ffffff;--text:#0f172a;--muted:#6b7280}
-body{margin:0;font-family:Inter,sans-serif;background:var(--bg);display:flex;justify-content:center;align-items:center;min-height:100vh}
-.card{background:var(--card);padding:24px;border-radius:12px;box-shadow:0 8px 30px rgba(11,23,39,0.08);width:100%;max-width:270px}
-h2{margin-top:0;margin-bottom:16px;font-size:20px;color:var(--text);text-align:center}
-label{display:block;margin-bottom:6px;font-weight:600;font-size:13px;color:var(--text)}
-input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:10px;border-radius:8px;border:1px solid #e6e9ef;margin-bottom:12px;font-size:14px}
-.btn{display:block;width:100%;padding:14px;background:var(--accent);color:#fff;font-weight:600;border:none;border-radius:12px;cursor:pointer;font-size:16px;margin-top:8px}
-.btn:disabled{opacity:0.5;cursor:not-allowed}
-.bottom-text{text-align:center;margin-top:16px;font-size:14px;color:var(--muted)}
-.bottom-text a{color:var(--accent);text-decoration:none;font-weight:600;margin-left:4px}
+:root{
+  --accent:#0077cc;
+  --bg:#f6f8fb;
+  --card:#ffffff;
+  --text:#0f172a;
+  --muted:#6b7280;
+}
+body{
+  margin:0;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+  background: var(--bg);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+}
+.card{
+  background: var(--card);
+  padding: 24px;
+  border-radius: 12px;
+  box-shadow: 0 8px 30px rgba(11,23,39,0.08);
+  width: 100%;
+  max-width: 270px;
+}
+h2{
+  margin-top:0;
+  margin-bottom:16px;
+  font-size:20px;
+  color: var(--text);
+  text-align:center;
+}
+label{
+  display:block;
+  margin-bottom:6px;
+  font-weight:600;
+  font-size:13px;
+  color: var(--text);
+}
+input[type="text"], input[type="email"], input[type="password"]{
+  width:95%;
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #e6e9ef;
+  margin-bottom:12px;
+  font-size:14px;
+}
+.btn{
+  display:block;
+  width:100%;
+  padding:14px;
+  background: var(--accent);
+  color:#fff;
+  font-weight:600;
+  border:none;
+  border-radius:12px;
+  cursor:pointer;
+  font-size:16px;
+  margin-top:8px;
+}
+.bottom-text{
+  text-align:center;
+  margin-top:16px;
+  font-size:14px;
+  color: var(--muted);
+}
+.bottom-text a{
+  color: var(--accent);
+  text-decoration:none;
+  font-weight:600;
+  margin-left:4px;
+}
 </style>
 </head>
 <body>
 
 <div class="card">
   <h2>Criar Conta</h2>
-  <form id="signupForm" onsubmit="event.preventDefault(); window.location.href='login.html';">
+  <form id="signupForm">
     <label for="name">Nome completo</label>
     <input type="text" id="name" required>
 
@@ -31,12 +92,8 @@ input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:
     <label for="password">Senha</label>
     <input type="password" id="password" required>
 
-    <label for="confirmPassword">Confirmar senha</label>
+    <label for="confirmPassword">Confirmar Senha</label>
     <input type="password" id="confirmPassword" required>
-
-    <label>
-      <input type="checkbox" id="terms" required> Aceito os termos e condições
-    </label>
 
     <button type="submit" class="btn">Criar Conta</button>
   </form>
@@ -45,7 +102,8 @@ input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:
     Já tem uma conta? <a href="login.html">Entrar</a>
   </div>
 </div>
-  <script type="module">
+
+<script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
   import { getAuth, createUserWithEmailAndPassword, sendEmailVerification } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
 
@@ -62,19 +120,14 @@ input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:
   const auth = getAuth(app);
 
   const form = document.getElementById("signupForm");
-  const nameEl = document.getElementById("name");
-  const emailEl = document.getElementById("email");
-  const passwordEl = document.getElementById("password");
-  const confirmPasswordEl = document.getElementById("confirmPassword");
-
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
+    const name = document.getElementById("name").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
+    const confirmPassword = document.getElementById("confirmPassword").value.trim();
 
-    const email = emailEl.value.trim();
-    const password = passwordEl.value.trim();
-    const confirmPassword = confirmPasswordEl.value.trim();
-
-    if (password !== confirmPassword) {
+    if(password !== confirmPassword){
       alert("As senhas não coincidem!");
       return;
     }
@@ -89,5 +142,6 @@ input[type="text"],input[type="email"],input[type="password"]{width:95%;padding:
     }
   });
 </script>
+
 </body>
 </html>
