Refactor reset-password.html for clarity and updates

--- a/reset-password.html
+++ b/reset-password.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Redefinir Senha</title>
 <style>
-/* Mesmos estilos do login.html */
+/* Mesma estilização das outras páginas */
 :root{
   --accent:#0077cc;
   --bg:#f6f8fb;
@@ -28,7 +28,7 @@ body{
   border-radius: 12px;
   box-shadow: 0 8px 30px rgba(11,23,39,0.08);
   width: 100%;
-  max-width: 270px;
+  max-width: 300px;
 }
 h2{
   margin-top:0;
@@ -111,11 +111,12 @@ input[type="email"]{
   const auth = getAuth(app);
 
   const form = document.getElementById("resetForm");
+  const emailEl = document.getElementById("email");
+
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
-    const email = document.getElementById("email").value.trim();
     try {
-      await sendPasswordResetEmail(auth, email);
+      await sendPasswordResetEmail(auth, emailEl.value);
       alert("Email enviado! Verifique sua caixa de entrada.");
       window.location.href = "login.html";
     } catch (error) {
